dotbot: force override user-dirs.dirs
because gnome keeps overriding it

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
     ~/.config/rofi:
     ~/.config/systemd:
     ~/.config/user-dirs.dirs:
+        force: true
     ~/.scripts:
     ~/.bashrc:
     ~/.ssh:
