tmux: bind keys to join pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,3 +47,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 # the time in milliseconds for which tmux waits after an escape is input
 # to determine if it is part of a function or meta key sequences.
 set escape-time 50
+
+# join panes
+bind-key "M-\"" join-pane -h
+bind-key "M-%" join-pane -v
