tmux: correctly bind keys to join pane
I had swapped -v and -h

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,5 +49,5 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 set escape-time 50
 
 # join panes
-bind-key "M-\"" join-pane -h
-bind-key "M-%" join-pane -v
+bind-key "M-\"" join-pane -v
+bind-key "M-%" join-pane -h
