--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "kak/plugins/plug.kak"]
 	path = kak/plugins/plug.kak
 	url = https://github.com/robertmeta/plug.kak.git
+[submodule "kitty/kitty-themes"]
+	path = kitty/kitty-themes
+	url = https://github.com/dexpota/kitty-themes.git
