--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -587,8 +587,8 @@ tab_bar_background none
 
 #: Color scheme {{{
 
-foreground #f8f8f2
-background #1b1d1e
+#foreground #f8f8f2
+#background #1b1d1e
 
 #: The foreground and background colors
 
@@ -611,26 +611,26 @@ background_opacity 0.9
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-background_image none
+#background_image none
 
 #: Path to a background image. Must be in PNG format.
 
-background_image_layout tiled
+#background_image_layout tiled
 
 #: Whether to tile or scale the background image.
 
-background_image_linear no
+#background_image_linear no
 
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-dynamic_background_opacity no
+#dynamic_background_opacity no
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
 #: decrease_background_opacity) or the remote control facility.
 
-background_tint 0.0
+#background_tint 0.0
 
 #: How much to tint the background image by the background color. The
 #: tint is applied only under the text area, not margin/borders. Makes
@@ -639,17 +639,17 @@ background_tint 0.0
 #: background_opacity is set and transparent windows are supported or
 #: background_image is set.
 
-dim_opacity 0.75
+#dim_opacity 0.75
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #000000
+#selection_foreground #000000
 
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-selection_background #fffacd
+#selection_background #fffacd
 
 #: The background for text selected with the mouse.
 
@@ -658,67 +658,67 @@ selection_background #fffacd
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-color0 #1b1d1e
-color8 #505354
+#color0 #1b1d1e
+#color8 #505354
 
 #: black
 
-color1 #f92672
-color9 #ff5995
+#color1 #f92672
+#color9 #ff5995
 
 #: red
 
-color2  #82b414
-color10 #b6e354
+#color2  #82b414
+#color10 #b6e354
 
 #: green
 
-color3  #fd971f
-color11 #feed6c
+#color3  #fd971f
+#color11 #feed6c
 
 #: yellow
 
-color4  #4e82aa
-color12 #0c73c2
+#color4  #4e82aa
+#color12 #0c73c2
 
 #: blue
 
-color5  #8c54fe
-color13 #9e6ffe
+#color5  #8c54fe
+#color13 #9e6ffe
 
 #: magenta
 
-color6  #465457
-color14 #899ca1
+#color6  #465457
+#color14 #899ca1
 
 #: cyan
 
-color7  #a8a8a3
-color15 #f8f8f2
+#color7  #a8a8a3
+#color15 #f8f8f2
 
 #: white
 
-mark1_foreground black
+#mark1_foreground black
 
 #: Color for marks of type 1
 
-mark1_background #98d3cb
+#mark1_background #98d3cb
 
 #: Color for marks of type 1 (light steel blue)
 
-mark2_foreground black
+#mark2_foreground black
 
 #: Color for marks of type 2
 
-mark2_background #f2dcd3
+#mark2_background #f2dcd3
 
 #: Color for marks of type 1 (beige)
 
-mark3_foreground black
+#mark3_foreground black
 
 #: Color for marks of type 3
 
-mark3_background #f274bc
+#mark3_background #f274bc
 
 #: Color for marks of type 1 (violet)
 
