--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
     ~/.gtkrc-2.0: gtk/gtk-2.0/gtkrc-2.0
     ~/.config/gtk-3.0: gtk/gtk-3.0
     ~/.config/kak:
+    ~/.config/kak-lsp:
     ~/.config/khal:
     ~/.config/kitty:
     ~/.config/mpv:
