--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -in -filter -selection clipboar
 bind -Tcopy-mode-vi "Enter" send -X copy-pipe-and-cancel "xclip -in -filter -selection clipboard | xclip -in -selection primary"
 
 # reload ~/.tmux.conf
-bind R source-file ~/.tmux.conf
+bind R { source-file ~/.tmux.conf ; display-message "tmux.conf reloaded" }
 
 # start window numbers at 1 to match keyboard order
 set -g base-index 1
