--- a/tmux.conf
+++ b/tmux.conf
@@ -1,23 +1,23 @@
 # improve colors
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
 # act like vim
-set-window-option -g mode-keys vi
-bind -Tcopy-mode-vi 'v' send -X begin-selection
-bind -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -in -filter -selection clipboard | xclip -in -selection primary"
-bind -Tcopy-mode-vi "Enter" send -X copy-pipe-and-cancel "xclip -in -filter -selection clipboard | xclip -in -selection primary"
+set-option -g mode-keys vi
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -in -filter -selection clipboard | xclip -in -selection primary"
+bind-key -Tcopy-mode-vi "Enter" send -X copy-pipe-and-cancel "xclip -in -filter -selection clipboard | xclip -in -selection primary"
 
 # reload ~/.tmux.conf
-bind R { source-file ~/.tmux.conf ; display-message "tmux.conf reloaded" }
+bind-key R { source-file ~/.tmux.conf ; display-message "tmux.conf reloaded" }
 
 # start window numbers at 1 to match keyboard order
-set -g base-index 1
-set-window-option -g pane-base-index 1
+set-option -g base-index 1
+set-option -g pane-base-index 1
 
 # Set prefix to Ctrl-Space
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
 # window switching without releasing the control key
 bind-key C-n next-window
@@ -38,7 +38,7 @@ bind-key C-k send-keys "C-k"
 bind-key C-l send-keys "C-l"
 
 # enable mouse scrolling
-set -g mouse on
+set-option -g mouse on
 
 # copy to clipboard with mouse selection
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -filter -selection clipboard | xclip -in -selection primary"
@@ -46,7 +46,7 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xc
 
 # the time in milliseconds for which tmux waits after an escape is input
 # to determine if it is part of a function or meta key sequences.
-set escape-time 50
+set-option -g escape-time 50
 
 # join panes
 bind-key "M-\"" join-pane -v
