vim: install ale plugin
Asynchronous Lint Engine
ALE (Asynchronous Lint Engine) is a plugin providing linting (syntax checking
and semantic errors) in NeoVim 0.2.0+ and Vim 8 while you edit your text files,
and acts as a Vim Language Server Protocol client.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/pack/isa/start/angr.vim"]
 	path = vim/pack/isa/start/angr.vim
 	url = git@gitlab.com:isa4/angr.vim.git
+[submodule "vim/pack/isa/start/ale"]
+	path = vim/pack/isa/start/ale
+	url = https://github.com/dense-analysis/ale.git
