tmux.conf: set window title

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,3 +51,8 @@ set-option -g escape-time 35
 # join panes
 bind-key "M-\"" join-pane -v
 bind-key "M-%" join-pane -h
+
+# attempt to set client termial title using tsl and fsl
+set-option -g set-titles on
+set-option -g set-titles-string "[#S] #T"
+set-option -wg automatic-rename on
