--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -378,8 +378,8 @@ command_on_bell none
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  810
-initial_window_height 460
+initial_window_width  85c
+initial_window_height 20c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
