tmux: increase length of displayed session names

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,3 +56,6 @@ bind-key "M-%" join-pane -h
 set-option -g set-titles on
 set-option -g set-titles-string "[#S] #T"
 set-option -wg automatic-rename on
+
+# correctly display longer session names in the status line
+set-option -g status-left-length 20
