--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
 
 - link:
     ~/.gtkrc-2.0: gtk/gtk-2.0/gtkrc-2.0
+    ~/.config/git-prompt.sh:
     ~/.config/gtk-3.0: gtk/gtk-3.0
     ~/.config/kak:
     ~/.config/kak-lsp:
