--- a/tmux.conf
+++ b/tmux.conf
@@ -18,19 +18,15 @@ set-option -g pane-base-index 1
 bind-key C-n next-window
 bind-key C-p previous-window
 
-# vim and tmux intuitive window switching
-# from https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-# send shadowed keys by prepending prefix
-bind-key C-h send-keys "C-h"
-bind-key C-j send-keys "C-j"
-bind-key C-k send-keys "C-k"
-bind-key C-l send-keys "C-l"
+# pane switching
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
+bind-key -r C-h select-pane -L
+bind-key -r C-j select-pane -D
+bind-key -r C-k select-pane -U
+bind-key -r C-l select-pane -R
 
 # enable mouse scrolling
 set-option -g mouse on
