tmux.conf: allow repeated sending of prefix

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,9 @@ set-option -g pane-base-index 1
 bind-key C-n next-window
 bind-key C-p previous-window
 
+# send prefix
+bind-key -r C-b send-prefix
+
 # pane switching
 bind-key -r h select-pane -L
 bind-key -r j select-pane -D
