bash: add ~/.bash_completion file

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,6 +26,7 @@
     ~/.config/user-dirs.dirs:
         force: true
     ~/.scripts:
+    ~/.bash_completion:
     ~/.bash_profile:
     ~/.bashrc:
     ~/.ssh:
