--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/pack/isa/start/ale"]
 	path = vim/pack/isa/start/ale
 	url = https://github.com/dense-analysis/ale.git
+[submodule "bash/complete-alias"]
+	path = bash/complete-alias
+	url = https://github.com/cykerway/complete-alias.git
