--- a/gtk/gtk-3.0/settings.ini
+++ b/gtk/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-font-name=Fira Code 9
-gtk-theme-name=Arc-Dark
+gtk-theme-name=Arc
 gtk-icon-theme-name=Arc
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
