--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+include theme.conf
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -145,7 +147,7 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #cccccc
+# cursor #cccccc
 
 #: Default cursor color
 
@@ -154,8 +156,7 @@ cursor_text_color background
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
-
-cursor_shape block
+cursor_shape underline
 
 #: The cursor shape can be one of (block, beam, underline)
 
@@ -592,7 +593,7 @@ tab_bar_background none
 
 #: The foreground and background colors
 
-background_opacity 0.9
+# background_opacity 0.9
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -722,7 +723,6 @@ background_opacity 0.9
 
 #: Color for marks of type 1 (violet)
 
-include theme.conf
 #: }}}
 
 #: Advanced {{{
