ripgreprc: ignore .git

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
     ~/.config/khal:
     ~/.config/kitty:
     ~/.config/mpv:
+    ~/.config/ripgreprc:
     ~/.config/rofi:
     ~/.config/systemd:
     ~/.config/user-dirs.dirs:
