fonts: use fira mono instead of fira code

--- a/gtk/gtk-3.0/settings.ini
+++ b/gtk/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-font-name=Fira Code 9
+gtk-font-name=Fira Mono 9
 gtk-theme-name=Arc
 gtk-icon-theme-name=Arc
 gtk-cursor-theme-name=Adwaita
