tmux.conf: set prefix to C-g
because that seems less annoying that C-b and it's what Zellij uses by
default

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,12 @@ bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -in -filter -selection clipboard | xclip -in -selection primary"
 bind-key -Tcopy-mode-vi "Enter" send -X copy-pipe-and-cancel "xclip -in -filter -selection clipboard | xclip -in -selection primary"
 
+# set and send prefix
+set-option -g prefix C-g
+bind-key C-g send-prefix
+unbind-key C-a
+unbind-key -T prefix C-a
+
 # reload ~/.tmux.conf
 bind-key R { source-file ~/.tmux.conf ; display-message "tmux.conf reloaded" }
 
