tmux.conf: add Meta keybinds to select panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,11 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind-key -Troot M-h select-pane -L
+bind-key -Troot M-j select-pane -D
+bind-key -Troot M-k select-pane -U
+bind-key -Troot M-l select-pane -R
+
 # enable mouse scrolling
 set-option -g mouse on
 
