tmux: don't always detach when session is destroyed
With detach-on-destroy set to no-detached, the client is detached only
if there are no detached sessions; if detached sessions exist, the
client is switched to the most recently active.

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,13 @@ bind-key -T root -N "Switch to previous client" \
 bind-key -T root -N "Switch to next client" \
 	M-down switch-client -n
 
+# If on (the default), the client is detached when the session it is attached
+# to is destroyed. If off, the client is switched to the most recently active
+# of the remaining sessions. If no-detached, the client is detached only if
+# there are no detached sessions; if detached sessions exist, the client is
+# switched to the most recently active.
+set-option -g detach-on-destroy no-detached
+
 # enable mouse scrolling
 set-option -g mouse on
 
