tmux: remain on exit if program failed

--- a/tmux.conf
+++ b/tmux.conf
@@ -90,3 +90,6 @@ set-option -g status-left-length 20
 
 bind-key -N "Set session working directory to the current pane's working directory" \
 	"M-c" attach-session -c "#{pane_current_path}"
+
+# Remain on exit if the program running in a pane exits with non-zero status
+set-option -g remain-on-exit failed
