mpd: install mpd and ario
MPD is a daemon for playing music
ario is a graphical GTK2 client for MPD

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
     ~/.config/gtk-3.0: gtk/gtk-3.0
     ~/.config/khal:
     ~/.config/kitty:
+    ~/.config/mpd:
     ~/.config/mpv:
     ~/.config/nvim:
     ~/.config/paru:
