--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
     ~/.config/kitty:
     ~/.config/mpd:
     ~/.config/mpv:
+    ~/.config/ncmpcpp:
     ~/.config/nvim:
     ~/.config/paru:
     ~/.config/ranger:
