--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -10,14 +10,14 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-#music_directory		"~/music"
+music_directory		"~/music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-#playlist_directory		"~/.mpd/playlists"
+playlist_directory		"~/.local/share/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -25,7 +25,7 @@
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-#db_file			"~/.mpd/database"
+db_file			"~/.local/share/mpd/database"
 
 # These settings are the locations for the daemon log files for the daemon.
 #
@@ -35,7 +35,7 @@
 # If you use systemd, do not configure a log_file.  With systemd, MPD
 # defaults to the systemd journal, which is fine.
 #
-#log_file			"~/.mpd/log"
+#log_file			"~/.local/share/mpd/log"
 
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
@@ -43,19 +43,19 @@
 #
 # If you use systemd, do not configure a pid_file.
 #
-#pid_file			"~/.mpd/pid"
+#pid_file			"~/.local/share/mpd/pid"
 
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
 # it was brought down. This setting is disabled by default and the server
 # state will be reset on server start up.
 #
-#state_file			"~/.mpd/state"
+state_file			"~/.local/share/mpd/state"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-#sticker_file			"~/.mpd/sticker.sql"
+#sticker_file			"~/.local/share/mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -85,7 +85,7 @@
 #bind_to_address		"any"
 #
 # And for Unix Socket
-#bind_to_address		"~/.mpd/socket"
+#bind_to_address		"~/.local/share/mpd/socket"
 #
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
@@ -101,7 +101,7 @@
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
-#restore_paused "no"
+restore_paused "yes"
 #
 # This setting enables MPD to create playlists in a format usable by other
 # music players.
@@ -135,12 +135,12 @@
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links outside of the configured music_directory.
 #
-#follow_outside_symlinks	"yes"
+follow_outside_symlinks	"yes"
 #
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links inside of the configured music_directory.
 #
-#follow_inside_symlinks		"yes"
+follow_inside_symlinks		"yes"
 #
 ###############################################################################
 
@@ -367,6 +367,13 @@ input {
 #	mixer_type      "none"			# optional
 #}
 #
+## Output with PipeWire based on
+## https://wiki.archlinux.org/title/Music_Player_Daemon#Audio_configuration
+#
+audio_output {
+	type		"pipewire"
+	name		"PipeWire Sound Server"
+}
 ###############################################################################
 
 
