--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -6,6 +6,11 @@ Shift+WHEEL_DOWN add video-scale-x -0.05 ; add video-scale-y -0.05
 Shift+f add sub-scale -0.05
 Shift+g add sub-scale +0.05
 
+shift+z add sub-delay -0.01
+shift+x add sub-delay +0.01
+ctrl+shift+z add sub-delay -0.001
+ctrl+shift+x add sub-delay +0.001
+
 ( add volume -10
 ) add volume +10
 
