tmux: detach on destroy

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,7 +59,7 @@ bind-key -T root -N "Switch to next client" \
 # of the remaining sessions. If no-detached, the client is detached only if
 # there are no detached sessions; if detached sessions exist, the client is
 # switched to the most recently active.
-set-option -g detach-on-destroy no-detached
+set-option -g detach-on-destroy on
 
 # enable mouse scrolling
 set-option -g mouse on
