tmux: add key binding to select the last window
the previously selected window

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,8 @@ bind-key -T root -N "Select the previous window" \
 	M-left previous-window
 bind-key -T root -N "Select the next window" \
 	M-right next-window
+bind-key -N "Select the last (previously selected) window" \
+	a last-window
 
 # client switching
 bind-key -T root -N "Switch to previous client" \
