--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
 - link:
     ~/.gtkrc-2.0: gtk/gtk-2.0/gtkrc-2.0
     ~/.config/bash:
+    ~/.config/conky:
     ~/.config/git:
     ~/.config/git-prompt.sh:
     ~/.config/gtk-3.0: gtk/gtk-3.0
